[tool.poetry]
name = "nangijala"
version = "0.0.0"
description = ""
authors = ["Lauri Vuorela <lauri.vuorela@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Motor = "^2.3.1"
tomodachi = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.800"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-isort = "^4.0.0"

[tool.black]
line-length = 120
target_version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "service"
skip = "mypy_cache"
